# bazel_repro-toolchains_llvm_examples

./: MODULE.bazel  README.md
examples/: MODULE.bazel
examples/foo/: BUILD.bazel  helper.bzl
src/: BUILD
