module(
    name = "repro-toolchains_llvm_examples",
    bazel_compatibility = [">=7.3.1"],
)

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain_system",
    llvm_version = "14.0.6",
)
llvm.toolchain_root(
    name = "llvm_toolchain_system",
    path = "/usr/lib/llvm-14",
)
use_repo(llvm, "llvm_toolchain_system")

register_toolchains("@llvm_toolchain_system//:all", dev_dependency = True)
