module(
    name = "examples",
    bazel_compatibility = [">=7.3.1"],
)

bazel_dep(name = "repro-toolchains_llvm_examples", version = "", dev_dependency = True)

local_path_override(
    module_name = "repro-toolchains_llvm_examples",
    path = "..",
)

bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain_system",
    llvm_version = "14.0.6",
)
llvm.toolchain_root(
    name = "llvm_toolchain_system",
    path = "/usr/lib/llvm-14",
)
use_repo(llvm, "llvm_toolchain_system")

register_toolchains("@llvm_toolchain_system//:all")
